@@ -58,9 +58,11 @@ class FieldDiff(BaseDiff):
 
 InitializeClass(FieldDiff)
 
+
 def dump(tag, x, lo, hi, r):
     for i in xrange(lo, hi):
-        r.append(tag +' ' + str(x[i]))
+        r.append(tag + ' %s' % x[i])
+
 
 def plain_replace(a, alo, ahi, b, blo, bhi, r):
     assert alo < ahi and blo < bhi
